follow unfollow user

--- a/client/src/components/Rightbar/rightbar.css
+++ b/client/src/components/Rightbar/rightbar.css
@@ -102,3 +102,18 @@
     border-radius: 10px;
     object-fit: cover;
 }
+
+.rightbarFollowButton{
+    margin-top: 20px;
+    margin-bottom: 10px;
+    display: flex;;
+    align-items: center;
+    border: none;
+    border-radius: 5px;
+    color: aliceblue;
+    background-color: #1877f2;
+    cursor: pointer;
+    padding: 5px;
+    font-size: 16px;
+    font-weight: 500;
+}
