--- a/client/src/components/Share/share.css
+++ b/client/src/components/Share/share.css
@@ -1,6 +1,6 @@
 .share{
     width: 100%;
-    height: 170px;
+    /* height: 170px; */
     border-radius: 10px;
     -webkit-box-shadow: 1px 2px 19px -3px rgba(0,0,0,0.39); 
     box-shadow: 1px 2px 19px -3px rgba(0,0,0,0.39);
@@ -70,5 +70,15 @@
     background-color: green;
     color: white;
     margin-right: 20px;
-    
+    cursor: pointer;
+}
+
+.shareImgContainer{
+    padding: 0 20px 10px 20px;
+    position: relative;
+}
+
+.shareImg{
+    width: 100%;
+    object-fit: cover;
 }
