--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -62,6 +62,15 @@
     cursor: pointer;
  }
 
+ .loginButton:disabled{
+   cursor: not-allowed;
+ }
+
+ .loginFailedMessage{
+   text-align: center;
+   color: rgb(194, 78, 78);
+ }
+
  .loginForgot{
     text-align: center;
     color: #1877f2;
