--- a/client/src/components/Post/post.css
+++ b/client/src/components/Post/post.css
@@ -16,6 +16,10 @@
     justify-content: space-between;
 }
 
+.postTopRight:hover{
+    cursor: pointer;
+}
+
 .postTopLeft{
     display: flex;
     align-items: center;
