--- a/client/src/components/Share/share.scss
+++ b/client/src/components/Share/share.scss
@@ -1,3 +1,5 @@
+@import "../../style.scss";
+
 .share{
     width: 100%;
     /* height: 170px; */
@@ -24,8 +26,12 @@
 }
 
 .shareInput{
+    @include themify($themes){
     border: none;
     width: 80%;
+    background-color: themed("bg");
+    color: themed("textColor")
+    }
 }
 
 .shareInput:focus{
