--- a/client/src/components/Topbar/topbar.scss
+++ b/client/src/components/Topbar/topbar.scss
@@ -1,16 +1,29 @@
+@import "../../style.scss";
+
 .topbarContainer{
+    @include themify($themes){
     height:50px;
     width:100%;
-    background-color: #1877f2;
+    // background-color: #1877f2;
+    background-color: themed("topbar");
     display: flex;
     align-items: center;
     position: sticky;
     top: 0;
     z-index: 999;
+    }
+    
 }
 
 .topbarLeft{
     flex: 3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.topbarLeft{
+    margin-right: 30px;
 }
 
 .logo{
@@ -27,23 +40,34 @@
 }
 
 .searchbar{
+    @include themify($themes){
     width:100%;
     height: 30px;
-    background-color: white;
+    background-color: themed("bg");
+    border: 1px solid themed("border");
     border-radius: 20px;
     display: flex;
     align-items: center;
+    }
 
 }
 
 .searchIcon{
+    @include themify($themes){
     font-size: 20px !important;
     margin-left: 10px;
+    color: themed("textColor");
+    }
 }
 
 .searchInput{
-    border: none ;
+    @include themify($themes){
+    border: 0;
     width: 80%;
+    color: themed("textColor");
+    border-radius: 10px; 
+    background-color: themed("bg");
+    }
 }
 
 .searchInput:focus{
