--- a/client/src/components/Post/post.css
+++ b/client/src/components/Post/post.css
@@ -85,3 +85,16 @@
     border-bottom: 1px dashed gray;
     font-size: 15px;
 }
+
+.deleteDialogueContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.deleteModalRight{
+    display: flex;
+    align-items: right;
+    
+}
