--- a/client/src/pages/messenger/messenger.scss
+++ b/client/src/pages/messenger/messenger.scss
@@ -36,6 +36,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
+}
+
+.noConversationText{
+    position: absolute;
+    top: 10%;
+    color: gray;
+    font-size: 30px;
+    cursor: default;
 }
 
 .chatBoxTop{
@@ -77,3 +86,4 @@
     height: calc(100vh - 70px);
     // background-color: aqua;
 }
+
